Fix the scoreboard rendering
The scoreboard rendering is overflowing the menu. Fixed "z-index" on the sass file.

--- a/static/scss/_scoreboard.scss
+++ b/static/scss/_scoreboard.scss
@@ -5,7 +5,7 @@ SCOREBOARD STYLES
 .sb-wrapper {
 	display: block;
 	position: relative;
-	z-index: 999;
+	z-index: 0;
 	padding: 0 25px;
 	overflow: visible;
 
